--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -418,8 +418,14 @@ button {
   background-color: var(--bg-color2);
   width: 2px;
   height: 40px;
-  margin: 5px 20px;
+  // margin: 5px 20px;
   opacity: 0.8;
+  position: absolute;
+  left: 0;
+  top: 2px;
+  @media (max-width: 767.98px) {
+    display: none;
+  }
 }
 
 // ***********************blur-background****************************
@@ -755,13 +761,8 @@ button {
 }
 
 .about_banner {
-  // width: 100%;
   height: 660px;
   object-fit: cover;
-  // display: flex;
-  // align-items: center;
-  // padding-top: 50px;
-  // justify-content: center;
   background-position: top -130px right 0px;
   background-image:  url(../../images/about-banner.jpg);
   @media (max-width: 1000px) {
@@ -770,7 +771,6 @@ button {
 }
 .blur_bg{
   backdrop-filter: blur(4px);
-  // border-radius: 0px 60px 0px 60px;
   background-image: linear-gradient(126.85deg, rgb(6, 41, 117) -36.13%, rgba(2, 124, 148, 0.37) 98.05%);
 }
 .about_banner_padding{
@@ -804,5 +804,12 @@ button {
 .hide_1000{
   @media (max-width: 1000px) {
     display: none;
+  }
+}
+.no_wrap{
+  white-space: nowrap;
+  @media (max-width: 560px) {
+    white-space: normal;
+    text-align: center;
   }
 }
